--- a/src/_spacing.scss
+++ b/src/_spacing.scss
@@ -31,7 +31,7 @@ $spacing-10: 9rem !default;
 .ma9 { margin: $spacing-9; }
 .ma10 { margin: $spacing-10; }
 
-.pa0 { padding-top: 0; }
+.pa0 { padding: 0; }
 .pa1 { padding: $spacing-1; }
 .pa2 { padding: $spacing-2; }
 .pa3 { padding: $spacing-3; }
@@ -157,7 +157,7 @@ $spacing-10: 9rem !default;
   .ma9-sm { margin: $spacing-9; }
   .ma10-sm { margin: $spacing-10; }
 
-  .pa0-sm { padding-top: 0; }
+  .pa0-sm { padding: 0; }
   .pa1-sm { padding: $spacing-1; }
   .pa2-sm { padding: $spacing-2; }
   .pa3-sm { padding: $spacing-3; }
@@ -283,7 +283,7 @@ $spacing-10: 9rem !default;
   .ma9-md { margin: $spacing-9; }
   .ma10-md { margin: $spacing-10; }
 
-  .pa0-md { padding-top: 0; }
+  .pa0-md { padding: 0; }
   .pa1-md { padding: $spacing-1; }
   .pa2-md { padding: $spacing-2; }
   .pa3-md { padding: $spacing-3; }
@@ -409,7 +409,7 @@ $spacing-10: 9rem !default;
   .ma9-lg { margin: $spacing-9; }
   .ma10-lg { margin: $spacing-10; }
 
-  .pa0-lg { padding-top: 0; }
+  .pa0-lg { padding: 0; }
   .pa1-lg { padding: $spacing-1; }
   .pa2-lg { padding: $spacing-2; }
   .pa3-lg { padding: $spacing-3; }
@@ -535,7 +535,7 @@ $spacing-10: 9rem !default;
   .ma9-xl { margin: $spacing-9; }
   .ma10-xl { margin: $spacing-10; }
 
-  .pa0-xl { padding-top: 0; }
+  .pa0-xl { padding: 0; }
   .pa1-xl { padding: $spacing-1; }
   .pa2-xl { padding: $spacing-2; }
   .pa3-xl { padding: $spacing-3; }
@@ -661,7 +661,7 @@ $spacing-10: 9rem !default;
   .ma9-xxl { margin: $spacing-9; }
   .ma10-xxl { margin: $spacing-10; }
 
-  .pa0-xxl { padding-top: 0; }
+  .pa0-xxl { padding: 0; }
   .pa1-xxl { padding: $spacing-1; }
   .pa2-xxl { padding: $spacing-2; }
   .pa3-xxl { padding: $spacing-3; }
